# ifctf-2023-finals-challs

crypto/cryptoleaq/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt  makedist.sh
crypto/cryptoleaq/solve/: client.py  program.compiled.saved  solve.py  writeup.md
crypto/dlog_dlog_dlog/: Dockerfile  challenge_template.yml  flag.txt
crypto/leak_as_a_service/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt
crypto/leak_as_a_service_revenge/: challenge_template.yml  docker-compose.yml  flag.txt
misc/its_a_match/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt
misc/prison/: Dockerfile  challenge_template.yml  docker-compose.yml
misc/prison/solve/: sol.py
pwn/rinux/: Dockerfile  Makefile  challenge.yml  challenge_template.yml  docker-compose.yml  example.py  flag.txt  run.sh  server.py
pwn/shellcancer/: Dockerfile  challenge.yml  challenge_template.yml  docker-compose.yml  flag.txt  run.sh
rev/backdoor/: challenge.yml  challenge_template.yml
rev/palazzp/: challenge.yml
rev/palazzp/palazzp/: Cargo.toml  readme
rev/palazzp/palazzp/src/: main.rs  shared.rs
rev/palazzp/palazzp/src/commands/: help.rs  mod.rs  receive_code.rs
web/fancy_posts/: .env  challenge.yml  challenge_template.yml  docker-compose.yml  flag.txt
web/just_l33t/: challenge.yml  challenge_template.yml  docker-compose.yml  flag.txt
web/uncommon_proxy/: challenge.yml  challenge_template.yml  docker-compose.yml  flag.txt
web/uncommon_proxy/src/backend/: Cargo.toml  Dockerfile
web/uncommon_proxy/src/backend/src/: json.rs  main.rs
(+138 files in other folders)
