[package]
name = "palazzp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rmp-serde = "1.1.1"
chrono = "0.4"
futures = "0.3"
dotenv = "0.15"
lazy_static = "1.4"
itertools = "0.11"
poise = "0.5"
base64 = "0.21"
base32 = "0.4.0"
goldberg = "0.1.0"

